fix: invalid feedback not visible

--- a/src/FoodOrderSystem.App/ClientApp/src/app/checkout/checkout.component.css
+++ b/src/FoodOrderSystem.App/ClientApp/src/app/checkout/checkout.component.css
@@ -202,6 +202,7 @@
 
 #checkout #body #infocard .invalid-feedback {
     color: darkred;
+    display: block;
     font-family: "Apercu", sans-serif;
     font-size: 14px;
     font-weight: 400;
